build_error.txt
C:\x86_64-elf-tools\bin\x86_64-elf-gcc.exe : kernel\apps\gui_demo.c: In function 'draw_sysinfo_content':
En línea: 1 Carácter: 1
+ C:\x86_64-elf-tools\bin\x86_64-elf-gcc.exe -ffreestanding -fno-except ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (kernel\apps\gui...sinfo_content'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
kernel\apps\gui_demo.c:510:30: error: 'my_ip' undeclared (first use in this function)
  510 |     uint8_t* ip = (uint8_t*)&my_ip;
      |                              ^~~~~
kernel\apps\gui_demo.c:510:30: note: each undeclared identifier is reported only once for each function it 
appears in
